*************************************************************************************************************************************
v95 (21.Jun.2021)

- Opt: ACU-AI point defenses are detecting as threat now.
- Opt: ACU-AI increased threat for mobile enemy units.
- Opt: Eco management optimized for first buildorders.
- Opt: ACU can now walk closer to the map border while evading from the enemy
- Opt: Added assist platoon for energy build and mass upgrade
- Opt: Increased the speed of the AI markergenerator by 15%
- Fix: fixed an issue with adding the first locationamanger on water.
- Fix: CanGraphAreaTo() no longer needs a unit, only position and layer
- Fix: SACU teleport function had an error while checking for SACU health.(thanks to Wingflier)

*************************************************************************************************************************************
v94 (06.Jun.2021)

- Fix: ACU was waiting for 5000 energy not 500 to issue an enhancement.
- Fix: Sub AI Rush was not building Hydrocarbons
- Fix: LocationRangeManager can now create new locations everywhere. (no location marker needed)
- Fix: ACU was not building if the buildarea was between 12 and 13 map units away.
- Opt: Nomads ACU is now first enhancing with GunUpgrade, not Capacitor.
- For AI devs: New function CanGraphAreaTo(). Check if two points are on the same land/sea area

*************************************************************************************************************************************
v93 (31.May.2021)

- New: Added advanced ACU fight function. Microing, threat management, proper overcharge targets.
- New: AI is now able to use gifted factories also after full share or player disconnect.
- New: Adding `DoNotAllowMarkerGenerator = true,` to the map scenario file will block autogenerating markers.
- Opt: Added builder for an early energy storage to enable ACU overcharge
- Fix: Hardcaped the amount of mobile AA that can be build per location